--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ loggingInterceptor = "4.11.0"
 material = "1.13.0"
 activity = "1.11.0"
 constraintlayout = "2.2.1"
+material3Version = "1.3.2"
 retrofit = "3.0.0"
 roomCompiler = "2.8.0"
 roomRuntime = "2.8.0"
@@ -37,6 +38,7 @@ lifecycleCompose = "2.9.3"
 [libraries]
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-material3-v121 = { module = "androidx.compose.material3:material3", version.ref = "material3Version" }
 androidx-room-compiler-v261 = { module = "androidx.room:room-compiler", version.ref = "roomCompiler" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomKtx" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
